--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
   "license": "MIT",
   "devDependencies": {
     "eslint": "~1.9.0",
-    "mocha": "~2.3.2"
+    "mocha": "~2.3.2",
+    "typescript": "next",
+    "tsd": "0.6.5"
   }
 }
